--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 									<!-- <span class="number" data-number="30">0</span> <span>+</span> -->
 									<!-- <span>&nbsp; Projects completed</span> -->
 								</p>
-								<p><a href="www.linkedin.com/in/vikas-saraswat3795" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
+								<p><a href="https://www.linkedin.com/in/vikas-saraswat3795/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
 							</div>
 						</div>
 					</div>
